--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,37 @@
+astroid==2.2.5
+attrdict==2.0.1
 certifi==2019.6.16
 chardet==3.0.4
+cytoolz==0.9.0.1
+eth-abi==1.3.0
+eth-account==0.3.0
 eth-hash==0.2.0
+eth-keyfile==0.5.1
+eth-keys==0.2.4
+eth-rlp==0.1.2
 eth-typing==2.1.0
+eth-utils==1.6.1
+hexbytes==0.2.0
 idna==2.8
+isort==4.3.21
+lazy-object-proxy==1.4.1
+lru-dict==1.1.6
+mccabe==0.6.1
 oauthlib==3.0.1
+parsimonious==0.8.1
 pycryptodome==3.8.2
+pylint==2.3.1
 PySocks==1.7.0
 python-dateutil==2.8.0
 pytz==2019.1
 requests==2.22.0
 requests-oauthlib==1.2.0
+rlp==1.1.0
 six==1.12.0
 toolz==0.9.0
 tweepy==3.7.0
+typed-ast==1.4.0
 urllib3==1.25.3
+web3==4.9.2
+websockets==6.0
+wrapt==1.11.2
